--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "mongoose-unique-validator": "^4.0.1"
   },
